--- a/public/tuiter/edit-profile.html
+++ b/public/tuiter/edit-profile.html
@@ -24,7 +24,7 @@
         </form>
         <hr>
         <form id="bio-update">
-            <label>Name</label><br/>
+            <label>Bio</label><br/>
             <textarea cols="40" rows="10"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris lobortis urna et ex imperdiet posuere. Sed nunc mauris, lobortis vel massa in, dictum ultricies nibh. Aenean in est maximus diam ultrices tempor eget ac mauris. Ut semper diam libero, et feugiat tellus rutrum vel. Sed imperdiet accumsan turpis, sed convallis felis volutpat nec. Curabitur consectetur sem enim, feugiat ornare dui accumsan efficitur. Suspendisse egestas, diam eu elementum vestibulum, tortor justo pharetra nisi, et pulvinar dolor nibh et tortor. Nulla cursus tortor ac efficitur fermentum. aliquam nec.</textarea>
         </form>
     </body>
